--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "firebase": "^9.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-calendar": "^3.5.0",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.45.0",
+    "sass-mediaqueries": "^1.6.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^26.6.0"
   }
 }
